# sidex

./: .flake8  .gitignore  .style.yapf  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/actions/build-distributions/: action.yml
docs/: index.md  requirements.txt
docs/refs/: client.md  server.md
sidex/: __init__.py  client.py  dump.py  request.py  server.py  setup.py
