[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "sidex"
version = "1.5.1"
description = "SIDEX: Simple Data Exchange server over HTTP"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Ryou Ohsawa", email = "ryou.ohsawa@nao.ac.jp" }
]
maintainers = [
  { name = "Ryou Ohsawa", email = "ryou.ohsawa@nao.ac.jp" }
]
requires-python = ">=3.9"
dependencies = [
  "flask>=2.0",
  "requests>=2.27",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/astronasutarou/sidex"

[tool.setuptools.packages.find]
where = ["."]
